<resources>
    <string name="app_name">Sportapp</string>
    <string name="HintEmail">E-mail</string>
    <string name="HintSenha">Senha</string>
    <string name="BtnEntrar">Entrar</string>
    <string name="TextoCadastrese">Cadastre-se</string>
    <string name="Cadastrar">Cadastrar</string>
    <string name="DigiteNome">Nome</string>
    <string name="EmailESenhaNaoPreenchidosAoLogar">É necessário informar e-mail e senha para fazer o LOGIN.</string>
    <string name="EsqueciSenha">Esqueceu sua senha?</string>
    <string name="RecuperarSenha">Recuperar</string>
    <string name="TextoCabecalhoRecuperarSenha">Use esta opção exclusivamente se você não lembra da sua senha. Digite o seu e-mail de cadastro e então um LINK para redefinição de senha será enviado para este e-mail.</string>
    <string name="CampoNomeObrigatorio">Preencha o campo ""Nome"".</string>
    <string name="CampoSenhaObrigatorio">Preencha o campo ""Senha"".</string>
    <string name="CampoEmailObrigatorio">Preencha o campo ""E-mail"".</string>
    <string name="UsuarioCadastradoComSucesso">Sucesso ao cadastrar usuário. Verifique seu e-mail para confirmar sua conta.</string>
    <string name="DigiteSenhaMaisForte">Atenção! Utilize uma senha mais forte.</string>
    <string name="EmailInvalido">Atenção! O e-mail inválido.</string>
    <string name="EmailJaCadastrado">Atenção! O e-mail já possuí cadastro no Sportapp.</string>
    <string name="ErroDesconhecido">Ocorreu um erro desconhecido. Verifique sua conexão com a internet.</string>
    <string name="UsuarioOuSenhaInva">E-mail ou senha inválidos.</string>
    <string name="UsuarioNaoCadastrado">E-mail não cadastrado no Sportapp.</string>
    <string name="ConfirmarEmail">Entre na sua caixa de e-mail e confirme sua conta. Caso não tenha recebido o e-mail de confirmação, toque aqui para reenviar.</string>
    <string name="EmailReenviado">E-mail reenviado.</string>
    <string name="EmailNaoCastrado">E-mail não cadastrado no Sportapp.</string>
    <string name="EmailEnviadoPara">E-mail enviado para: </string>
    <string name="Pesquisar">Pesquisar</string>
    <string name="Configuracoes">Configurações</string>
    <string name="Sair">Sair</string>
    <string name="Conversas">Conversas</string>
    <string name="Anuncios">Anuncios</string>
    <string name="Pessoas">Pessoas</string>
    <string name="SobreVoce">Sobre Você</string>
    <string name="Esportes">Ex: #tênis, #futebol, #basquete, #natação</string>
    <string name="Atualizar">Atualizar</string>
    <string name="ApagarConta">APAGAR CONTA</string>
    <string name="SucessoAtualizar">Sucesso ao atualizar</string>
    <string name="EsporteObrigatorio">Favor informar ao menos um esporte.</string>
    <string name="PermissoesNegadas">Permissões Negadas</string>
    <string name="ParaUsarOSportappPrecisaPermissao">Para utilizar o Sportapp é necessário aceitar as permissões.</string>
    <string name="SucessoAoAtualizarImagem">Sucesso ao atualizar a imagem do perfil.</string>
    <string name="FalhaAoAtualizarImagem">Falha ao atualizar a imagem do perfil.</string>
    <string name="title_activity_perfil">PerfilActivity</string>
    <string name="SeusEsportes">Seus Esportes</string>
    <string name="title_activity_conversa">ConversaActivity</string>
    <string name="perfil">Perfil</string>
    <string name="Id_canal_de_notificacao">SportappNotifications</string>
    <string name="ChaveSharedPreferences">SportappNotifications</string>
    <string name="ChaveToken">SportappNotifications</string>



</resources>
